feature: добавлен показ номера задания vulnerability-fix: изменен scope UserInformation

--- a/src/main/resources/templates/module-template.html
+++ b/src/main/resources/templates/module-template.html
@@ -39,7 +39,7 @@
 
     <div id="container" class="task-container">
       <div class="task">
-        <span class="label">Задание: </span>
+        <span class="label">Задание №<span id="task-num"></span>:</span>
         <div id="task-text" class="task-text"></div>
         <div id="task-with-img" class="display-none" style="display: flex; margin-top: 10px">
           <div class="placeholder"></div>
